--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.7.1",
     "sass": "^1.83.4",
     "swiper": "^11.2.1"
   },
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-responsive-masonry": "^2.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "typescript": "^5"
